fix: modify bottom container margin and alignment

--- a/css/character_selection.css
+++ b/css/character_selection.css
@@ -46,6 +46,12 @@ img.clouds {
     max-width: 20%;
 }
 
+.bottom-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 img.star {
     max-width: 10%;
 }
